Lab1/lab1-test-dir/ParCpp.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from ParCpp.y
-----------------------------------------------------------------------------

state 41 contains 1 shift/reduce conflicts.
state 44 contains 2 shift/reduce conflicts.
state 48 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pDef -> Def                                 (1)
	%start_pArg -> Arg                                 (2)
	%start_pStm -> Stm                                 (3)
	%start_pExp15 -> Exp15                             (4)
	%start_pExp14 -> Exp14                             (5)
	%start_pExp13 -> Exp13                             (6)
	%start_pExp12 -> Exp12                             (7)
	%start_pExp11 -> Exp11                             (8)
	%start_pExp9 -> Exp9                               (9)
	%start_pExp8 -> Exp8                               (10)
	%start_pExp4 -> Exp4                               (11)
	%start_pExp3 -> Exp3                               (12)
	%start_pExp2 -> Exp2                               (13)
	%start_pExp -> Exp                                 (14)
	%start_pExp1 -> Exp1                               (15)
	%start_pExp5 -> Exp5                               (16)
	%start_pExp6 -> Exp6                               (17)
	%start_pExp7 -> Exp7                               (18)
	%start_pExp10 -> Exp10                             (19)
	%start_pListExp -> ListExp                         (20)
	%start_pListDef -> ListDef                         (21)
	%start_pListArg -> ListArg                         (22)
	%start_pListId -> ListId                           (23)
	%start_pListStm -> ListStm                         (24)
	%start_pType -> Type                               (25)
	Integer -> L_integ                                 (26)
	Double -> L_doubl                                  (27)
	String -> L_quoted                                 (28)
	Id -> L_Id                                         (29)
	Program -> ListDef                                 (30)
	Def -> Type Id '(' ListArg ')' '{' ListStm '}'     (31)
	Def -> Stm                                         (32)
	Def -> 'typedef' Type Exp                          (33)
	Arg -> Type                                        (34)
	Arg -> Stm                                         (35)
	Arg -> 'const' Stm                                 (36)
	Stm -> Exp ';'                                     (37)
	Stm -> 'return' Exp ';'                            (38)
	Stm -> 'while' '(' Exp ')' Stm                     (39)
	Stm -> '{' ListStm '}'                             (40)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (41)
	Stm -> Type Id ';'                                 (42)
	Stm -> Type Id ',' ListId ';'                      (43)
	Stm -> Type Id '=' Exp ';'                         (44)
	Exp15 -> Integer                                   (45)
	Exp15 -> Double                                    (46)
	Exp15 -> String                                    (47)
	Exp15 -> 'true'                                    (48)
	Exp15 -> 'false'                                   (49)
	Exp15 -> Id                                        (50)
	Exp15 -> Id '(' ListExp ')'                        (51)
	Exp15 -> '(' Exp ')'                               (52)
	Exp14 -> Exp15 '++'                                (53)
	Exp14 -> Exp15 '--'                                (54)
	Exp14 -> Exp15                                     (55)
	Exp13 -> '++' Exp14                                (56)
	Exp13 -> '--' Exp14                                (57)
	Exp13 -> '-' Exp14                                 (58)
	Exp13 -> Exp14                                     (59)
	Exp12 -> Exp12 '*' Exp13                           (60)
	Exp12 -> Exp12 '/' Exp13                           (61)
	Exp12 -> Exp13                                     (62)
	Exp11 -> Exp11 '+' Exp12                           (63)
	Exp11 -> Exp11 '-' Exp12                           (64)
	Exp11 -> Exp12                                     (65)
	Exp9 -> Exp9 '<' Exp10                             (66)
	Exp9 -> Exp9 '>' Exp10                             (67)
	Exp9 -> Exp9 '<=' Exp10                            (68)
	Exp9 -> Exp9 '>=' Exp10                            (69)
	Exp9 -> Exp10                                      (70)
	Exp8 -> Exp8 '==' Exp9                             (71)
	Exp8 -> Exp8 '!=' Exp9                             (72)
	Exp8 -> Exp9                                       (73)
	Exp4 -> Exp4 '&&' Exp5                             (74)
	Exp4 -> Exp5                                       (75)
	Exp3 -> Exp3 '||' Exp4                             (76)
	Exp3 -> Exp4                                       (77)
	Exp2 -> Exp3 '=' Exp2                              (78)
	Exp2 -> Exp3                                       (79)
	Exp -> Exp1                                        (80)
	Exp1 -> Exp2                                       (81)
	Exp5 -> Exp6                                       (82)
	Exp6 -> Exp7                                       (83)
	Exp7 -> Exp8                                       (84)
	Exp10 -> Exp11                                     (85)
	ListExp ->                                         (86)
	ListExp -> Exp                                     (87)
	ListExp -> Exp ',' ListExp                         (88)
	ListDef ->                                         (89)
	ListDef -> ListDef Def                             (90)
	ListArg ->                                         (91)
	ListArg -> Arg                                     (92)
	ListArg -> Arg ',' ListArg                         (93)
	ListId ->                                          (94)
	ListId -> Id ListId                                (95)
	ListStm ->                                         (96)
	ListStm -> ListStm Stm                             (97)
	Type -> 'bool'                                     (98)
	Type -> 'double'                                   (99)
	Type -> 'int'                                      (100)
	Type -> 'string'                                   (101)
	Type -> 'void'                                     (102)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!='           { PT _ (TS _ 1) }
	'&&'           { PT _ (TS _ 2) }
	'('            { PT _ (TS _ 3) }
	')'            { PT _ (TS _ 4) }
	'*'            { PT _ (TS _ 5) }
	'+'            { PT _ (TS _ 6) }
	'++'           { PT _ (TS _ 7) }
	','            { PT _ (TS _ 8) }
	'-'            { PT _ (TS _ 9) }
	'--'           { PT _ (TS _ 10) }
	'/'            { PT _ (TS _ 11) }
	';'            { PT _ (TS _ 12) }
	'<'            { PT _ (TS _ 13) }
	'<='           { PT _ (TS _ 14) }
	'='            { PT _ (TS _ 15) }
	'=='           { PT _ (TS _ 16) }
	'>'            { PT _ (TS _ 17) }
	'>='           { PT _ (TS _ 18) }
	'bool'         { PT _ (TS _ 19) }
	'const'        { PT _ (TS _ 20) }
	'double'       { PT _ (TS _ 21) }
	'else'         { PT _ (TS _ 22) }
	'false'        { PT _ (TS _ 23) }
	'if'           { PT _ (TS _ 24) }
	'int'          { PT _ (TS _ 25) }
	'return'       { PT _ (TS _ 26) }
	'string'       { PT _ (TS _ 27) }
	'true'         { PT _ (TS _ 28) }
	'typedef'      { PT _ (TS _ 29) }
	'void'         { PT _ (TS _ 30) }
	'while'        { PT _ (TS _ 31) }
	'{'            { PT _ (TS _ 32) }
	'||'           { PT _ (TS _ 33) }
	'}'            { PT _ (TS _ 34) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_quoted       { PT _ (TL $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pDef     rule  1
	%start_pArg     rule  2
	%start_pStm     rule  3
	%start_pExp15   rule  4
	%start_pExp14   rule  5
	%start_pExp13   rule  6
	%start_pExp12   rule  7
	%start_pExp11   rule  8
	%start_pExp9    rule  9
	%start_pExp8    rule  10
	%start_pExp4    rule  11
	%start_pExp3    rule  12
	%start_pExp2    rule  13
	%start_pExp     rule  14
	%start_pExp1    rule  15
	%start_pExp5    rule  16
	%start_pExp6    rule  17
	%start_pExp7    rule  18
	%start_pExp10   rule  19
	%start_pListExp rule  20
	%start_pListDef rule  21
	%start_pListArg rule  22
	%start_pListId  rule  23
	%start_pListStm rule  24
	%start_pType    rule  25
	Integer         rule  26
	Double          rule  27
	String          rule  28
	Id              rule  29
	Program         rule  30
	Def             rules 31, 32, 33
	Arg             rules 34, 35, 36
	Stm             rules 37, 38, 39, 40, 41, 42, 43, 44
	Exp15           rules 45, 46, 47, 48, 49, 50, 51, 52
	Exp14           rules 53, 54, 55
	Exp13           rules 56, 57, 58, 59
	Exp12           rules 60, 61, 62
	Exp11           rules 63, 64, 65
	Exp9            rules 66, 67, 68, 69, 70
	Exp8            rules 71, 72, 73
	Exp4            rules 74, 75
	Exp3            rules 76, 77
	Exp2            rules 78, 79
	Exp             rule  80
	Exp1            rule  81
	Exp5            rule  82
	Exp6            rule  83
	Exp7            rule  84
	Exp10           rule  85
	ListExp         rules 86, 87, 88
	ListDef         rules 89, 90
	ListArg         rules 91, 92, 93
	ListId          rules 94, 95
	ListStm         rules 96, 97
	Type            rules 98, 99, 100, 101, 102

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'('            reduce using rule 89
	'++'           reduce using rule 89
	'-'            reduce using rule 89
	'--'           reduce using rule 89
	'bool'         reduce using rule 89
	'double'       reduce using rule 89
	'false'        reduce using rule 89
	'if'           reduce using rule 89
	'int'          reduce using rule 89
	'return'       reduce using rule 89
	'string'       reduce using rule 89
	'true'         reduce using rule 89
	'typedef'      reduce using rule 89
	'void'         reduce using rule 89
	'while'        reduce using rule 89
	'{'            reduce using rule 89
	L_integ        reduce using rule 89
	L_doubl        reduce using rule 89
	L_quoted       reduce using rule 89
	L_Id           reduce using rule 89
	%eof           reduce using rule 89

	Program        goto state 101
	ListDef        goto state 102

State 1


	'('            shift, and enter state 62
	'++'           shift, and enter state 63
	'-'            shift, and enter state 64
	'--'           shift, and enter state 65
	'bool'         shift, and enter state 29
	'double'       shift, and enter state 30
	'false'        shift, and enter state 67
	'if'           shift, and enter state 68
	'int'          shift, and enter state 31
	'return'       shift, and enter state 69
	'string'       shift, and enter state 32
	'true'         shift, and enter state 70
	'typedef'      shift, and enter state 100
	'void'         shift, and enter state 33
	'while'        shift, and enter state 71
	'{'            shift, and enter state 72
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 73
	L_quoted       shift, and enter state 74
	L_Id           shift, and enter state 37

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Def            goto state 97
	Stm            goto state 98
	Exp15          goto state 44
	Exp14          goto state 45
	Exp13          goto state 46
	Exp12          goto state 47
	Exp11          goto state 48
	Exp9           goto state 49
	Exp8           goto state 50
	Exp4           goto state 51
	Exp3           goto state 52
	Exp2           goto state 53
	Exp            goto state 54
	Exp1           goto state 55
	Exp5           goto state 56
	Exp6           goto state 57
	Exp7           goto state 58
	Exp10          goto state 59
	Type           goto state 99

State 2


	'('            shift, and enter state 62
	'++'           shift, and enter state 63
	'-'            shift, and enter state 64
	'--'           shift, and enter state 65
	'bool'         shift, and enter state 29
	'const'        shift, and enter state 66
	'double'       shift, and enter state 30
	'false'        shift, and enter state 67
	'if'           shift, and enter state 68
	'int'          shift, and enter state 31
	'return'       shift, and enter state 69
	'string'       shift, and enter state 32
	'true'         shift, and enter state 70
	'void'         shift, and enter state 33
	'while'        shift, and enter state 71
	'{'            shift, and enter state 72
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 73
	L_quoted       shift, and enter state 74
	L_Id           shift, and enter state 37

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Arg            goto state 96
	Stm            goto state 43
	Exp15          goto state 44
	Exp14          goto state 45
	Exp13          goto state 46
	Exp12          goto state 47
	Exp11          goto state 48
	Exp9           goto state 49
	Exp8           goto state 50
	Exp4           goto state 51
	Exp3           goto state 52
	Exp2           goto state 53
	Exp            goto state 54
	Exp1           goto state 55
	Exp5           goto state 56
	Exp6           goto state 57
	Exp7           goto state 58
	Exp10          goto state 59
	Type           goto state 61

State 3


	'('            shift, and enter state 62
	'++'           shift, and enter state 63
	'-'            shift, and enter state 64
	'--'           shift, and enter state 65
	'bool'         shift, and enter state 29
	'double'       shift, and enter state 30
	'false'        shift, and enter state 67
	'if'           shift, and enter state 68
	'int'          shift, and enter state 31
	'return'       shift, and enter state 69
	'string'       shift, and enter state 32
	'true'         shift, and enter state 70
	'void'         shift, and enter state 33
	'while'        shift, and enter state 71
	'{'            shift, and enter state 72
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 73
	L_quoted       shift, and enter state 74
	L_Id           shift, and enter state 37

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Stm            goto state 94
	Exp15          goto state 44
	Exp14          goto state 45
	Exp13          goto state 46
	Exp12          goto state 47
	Exp11          goto state 48
	Exp9           goto state 49
	Exp8           goto state 50
	Exp4           goto state 51
	Exp3           goto state 52
	Exp2           goto state 53
	Exp            goto state 54
	Exp1           goto state 55
	Exp5           goto state 56
	Exp6           goto state 57
	Exp7           goto state 58
	Exp10          goto state 59
	Type           goto state 95

State 4


	'('            shift, and enter state 62
	'false'        shift, and enter state 67
	'true'         shift, and enter state 70
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 73
	L_quoted       shift, and enter state 74
	L_Id           shift, and enter state 37

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 93

State 5


	'('            shift, and enter state 62
	'false'        shift, and enter state 67
	'true'         shift, and enter state 70
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 73
	L_quoted       shift, and enter state 74
	L_Id           shift, and enter state 37

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 44
	Exp14          goto state 92

State 6


	'('            shift, and enter state 62
	'++'           shift, and enter state 63
	'-'            shift, and enter state 64
	'--'           shift, and enter state 65
	'false'        shift, and enter state 67
	'true'         shift, and enter state 70
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 73
	L_quoted       shift, and enter state 74
	L_Id           shift, and enter state 37

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 44
	Exp14          goto state 45
	Exp13          goto state 91

State 7


	'('            shift, and enter state 62
	'++'           shift, and enter state 63
	'-'            shift, and enter state 64
	'--'           shift, and enter state 65
	'false'        shift, and enter state 67
	'true'         shift, and enter state 70
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 73
	L_quoted       shift, and enter state 74
	L_Id           shift, and enter state 37

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 44
	Exp14          goto state 45
	Exp13          goto state 46
	Exp12          goto state 90

State 8


	'('            shift, and enter state 62
	'++'           shift, and enter state 63
	'-'            shift, and enter state 64
	'--'           shift, and enter state 65
	'false'        shift, and enter state 67
	'true'         shift, and enter state 70
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 73
	L_quoted       shift, and enter state 74
	L_Id           shift, and enter state 37

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 44
	Exp14          goto state 45
	Exp13          goto state 46
	Exp12          goto state 47
	Exp11          goto state 89

State 9


	'('            shift, and enter state 62
	'++'           shift, and enter state 63
	'-'            shift, and enter state 64
	'--'           shift, and enter state 65
	'false'        shift, and enter state 67
	'true'         shift, and enter state 70
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 73
	L_quoted       shift, and enter state 74
	L_Id           shift, and enter state 37

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 44
	Exp14          goto state 45
	Exp13          goto state 46
	Exp12          goto state 47
	Exp11          goto state 48
	Exp9           goto state 88
	Exp10          goto state 59

State 10


	'('            shift, and enter state 62
	'++'           shift, and enter state 63
	'-'            shift, and enter state 64
	'--'           shift, and enter state 65
	'false'        shift, and enter state 67
	'true'         shift, and enter state 70
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 73
	L_quoted       shift, and enter state 74
	L_Id           shift, and enter state 37

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 44
	Exp14          goto state 45
	Exp13          goto state 46
	Exp12          goto state 47
	Exp11          goto state 48
	Exp9           goto state 49
	Exp8           goto state 87
	Exp10          goto state 59

State 11


	'('            shift, and enter state 62
	'++'           shift, and enter state 63
	'-'            shift, and enter state 64
	'--'           shift, and enter state 65
	'false'        shift, and enter state 67
	'true'         shift, and enter state 70
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 73
	L_quoted       shift, and enter state 74
	L_Id           shift, and enter state 37

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 44
	Exp14          goto state 45
	Exp13          goto state 46
	Exp12          goto state 47
	Exp11          goto state 48
	Exp9           goto state 49
	Exp8           goto state 50
	Exp4           goto state 86
	Exp5           goto state 56
	Exp6           goto state 57
	Exp7           goto state 58
	Exp10          goto state 59

State 12


	'('            shift, and enter state 62
	'++'           shift, and enter state 63
	'-'            shift, and enter state 64
	'--'           shift, and enter state 65
	'false'        shift, and enter state 67
	'true'         shift, and enter state 70
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 73
	L_quoted       shift, and enter state 74
	L_Id           shift, and enter state 37

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 44
	Exp14          goto state 45
	Exp13          goto state 46
	Exp12          goto state 47
	Exp11          goto state 48
	Exp9           goto state 49
	Exp8           goto state 50
	Exp4           goto state 51
	Exp3           goto state 85
	Exp5           goto state 56
	Exp6           goto state 57
	Exp7           goto state 58
	Exp10          goto state 59

State 13


	'('            shift, and enter state 62
	'++'           shift, and enter state 63
	'-'            shift, and enter state 64
	'--'           shift, and enter state 65
	'false'        shift, and enter state 67
	'true'         shift, and enter state 70
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 73
	L_quoted       shift, and enter state 74
	L_Id           shift, and enter state 37

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 44
	Exp14          goto state 45
	Exp13          goto state 46
	Exp12          goto state 47
	Exp11          goto state 48
	Exp9           goto state 49
	Exp8           goto state 50
	Exp4           goto state 51
	Exp3           goto state 52
	Exp2           goto state 84
	Exp5           goto state 56
	Exp6           goto state 57
	Exp7           goto state 58
	Exp10          goto state 59

State 14


	'('            shift, and enter state 62
	'++'           shift, and enter state 63
	'-'            shift, and enter state 64
	'--'           shift, and enter state 65
	'false'        shift, and enter state 67
	'true'         shift, and enter state 70
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 73
	L_quoted       shift, and enter state 74
	L_Id           shift, and enter state 37

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 44
	Exp14          goto state 45
	Exp13          goto state 46
	Exp12          goto state 47
	Exp11          goto state 48
	Exp9           goto state 49
	Exp8           goto state 50
	Exp4           goto state 51
	Exp3           goto state 52
	Exp2           goto state 53
	Exp            goto state 83
	Exp1           goto state 55
	Exp5           goto state 56
	Exp6           goto state 57
	Exp7           goto state 58
	Exp10          goto state 59

State 15


	'('            shift, and enter state 62
	'++'           shift, and enter state 63
	'-'            shift, and enter state 64
	'--'           shift, and enter state 65
	'false'        shift, and enter state 67
	'true'         shift, and enter state 70
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 73
	L_quoted       shift, and enter state 74
	L_Id           shift, and enter state 37

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 44
	Exp14          goto state 45
	Exp13          goto state 46
	Exp12          goto state 47
	Exp11          goto state 48
	Exp9           goto state 49
	Exp8           goto state 50
	Exp4           goto state 51
	Exp3           goto state 52
	Exp2           goto state 53
	Exp1           goto state 82
	Exp5           goto state 56
	Exp6           goto state 57
	Exp7           goto state 58
	Exp10          goto state 59

State 16


	'('            shift, and enter state 62
	'++'           shift, and enter state 63
	'-'            shift, and enter state 64
	'--'           shift, and enter state 65
	'false'        shift, and enter state 67
	'true'         shift, and enter state 70
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 73
	L_quoted       shift, and enter state 74
	L_Id           shift, and enter state 37

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 44
	Exp14          goto state 45
	Exp13          goto state 46
	Exp12          goto state 47
	Exp11          goto state 48
	Exp9           goto state 49
	Exp8           goto state 50
	Exp5           goto state 81
	Exp6           goto state 57
	Exp7           goto state 58
	Exp10          goto state 59

State 17


	'('            shift, and enter state 62
	'++'           shift, and enter state 63
	'-'            shift, and enter state 64
	'--'           shift, and enter state 65
	'false'        shift, and enter state 67
	'true'         shift, and enter state 70
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 73
	L_quoted       shift, and enter state 74
	L_Id           shift, and enter state 37

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 44
	Exp14          goto state 45
	Exp13          goto state 46
	Exp12          goto state 47
	Exp11          goto state 48
	Exp9           goto state 49
	Exp8           goto state 50
	Exp6           goto state 80
	Exp7           goto state 58
	Exp10          goto state 59

State 18


	'('            shift, and enter state 62
	'++'           shift, and enter state 63
	'-'            shift, and enter state 64
	'--'           shift, and enter state 65
	'false'        shift, and enter state 67
	'true'         shift, and enter state 70
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 73
	L_quoted       shift, and enter state 74
	L_Id           shift, and enter state 37

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 44
	Exp14          goto state 45
	Exp13          goto state 46
	Exp12          goto state 47
	Exp11          goto state 48
	Exp9           goto state 49
	Exp8           goto state 50
	Exp7           goto state 79
	Exp10          goto state 59

State 19


	'('            shift, and enter state 62
	'++'           shift, and enter state 63
	'-'            shift, and enter state 64
	'--'           shift, and enter state 65
	'false'        shift, and enter state 67
	'true'         shift, and enter state 70
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 73
	L_quoted       shift, and enter state 74
	L_Id           shift, and enter state 37

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 44
	Exp14          goto state 45
	Exp13          goto state 46
	Exp12          goto state 47
	Exp11          goto state 48
	Exp10          goto state 78

State 20


	'('            shift, and enter state 62
	'++'           shift, and enter state 63
	'-'            shift, and enter state 64
	'--'           shift, and enter state 65
	'false'        shift, and enter state 67
	'true'         shift, and enter state 70
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 73
	L_quoted       shift, and enter state 74
	L_Id           shift, and enter state 37
	%eof           reduce using rule 86

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Exp15          goto state 44
	Exp14          goto state 45
	Exp13          goto state 46
	Exp12          goto state 47
	Exp11          goto state 48
	Exp9           goto state 49
	Exp8           goto state 50
	Exp4           goto state 51
	Exp3           goto state 52
	Exp2           goto state 53
	Exp            goto state 76
	Exp1           goto state 55
	Exp5           goto state 56
	Exp6           goto state 57
	Exp7           goto state 58
	Exp10          goto state 59
	ListExp        goto state 77

State 21


	'('            reduce using rule 89
	'++'           reduce using rule 89
	'-'            reduce using rule 89
	'--'           reduce using rule 89
	'bool'         reduce using rule 89
	'double'       reduce using rule 89
	'false'        reduce using rule 89
	'if'           reduce using rule 89
	'int'          reduce using rule 89
	'return'       reduce using rule 89
	'string'       reduce using rule 89
	'true'         reduce using rule 89
	'typedef'      reduce using rule 89
	'void'         reduce using rule 89
	'while'        reduce using rule 89
	'{'            reduce using rule 89
	L_integ        reduce using rule 89
	L_doubl        reduce using rule 89
	L_quoted       reduce using rule 89
	L_Id           reduce using rule 89
	%eof           reduce using rule 89

	ListDef        goto state 75

State 22


	'('            shift, and enter state 62
	'++'           shift, and enter state 63
	'-'            shift, and enter state 64
	'--'           shift, and enter state 65
	'bool'         shift, and enter state 29
	'const'        shift, and enter state 66
	'double'       shift, and enter state 30
	'false'        shift, and enter state 67
	'if'           shift, and enter state 68
	'int'          shift, and enter state 31
	'return'       shift, and enter state 69
	'string'       shift, and enter state 32
	'true'         shift, and enter state 70
	'void'         shift, and enter state 33
	'while'        shift, and enter state 71
	'{'            shift, and enter state 72
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 73
	L_quoted       shift, and enter state 74
	L_Id           shift, and enter state 37
	%eof           reduce using rule 91

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Arg            goto state 42
	Stm            goto state 43
	Exp15          goto state 44
	Exp14          goto state 45
	Exp13          goto state 46
	Exp12          goto state 47
	Exp11          goto state 48
	Exp9           goto state 49
	Exp8           goto state 50
	Exp4           goto state 51
	Exp3           goto state 52
	Exp2           goto state 53
	Exp            goto state 54
	Exp1           goto state 55
	Exp5           goto state 56
	Exp6           goto state 57
	Exp7           goto state 58
	Exp10          goto state 59
	ListArg        goto state 60
	Type           goto state 61

State 23


	L_Id           shift, and enter state 37
	%eof           reduce using rule 94

	Id             goto state 35
	ListId         goto state 36

State 24


	'('            reduce using rule 96
	'++'           reduce using rule 96
	'-'            reduce using rule 96
	'--'           reduce using rule 96
	'bool'         reduce using rule 96
	'double'       reduce using rule 96
	'false'        reduce using rule 96
	'if'           reduce using rule 96
	'int'          reduce using rule 96
	'return'       reduce using rule 96
	'string'       reduce using rule 96
	'true'         reduce using rule 96
	'void'         reduce using rule 96
	'while'        reduce using rule 96
	'{'            reduce using rule 96
	L_integ        reduce using rule 96
	L_doubl        reduce using rule 96
	L_quoted       reduce using rule 96
	L_Id           reduce using rule 96
	%eof           reduce using rule 96

	ListStm        goto state 34

State 25


	'bool'         shift, and enter state 29
	'double'       shift, and enter state 30
	'int'          shift, and enter state 31
	'string'       shift, and enter state 32
	'void'         shift, and enter state 33

	Type           goto state 28

State 26


	L_integ        shift, and enter state 27


State 27

	Integer -> L_integ .                                (rule 26)

	'!='           reduce using rule 26
	'&&'           reduce using rule 26
	'('            reduce using rule 26
	')'            reduce using rule 26
	'*'            reduce using rule 26
	'+'            reduce using rule 26
	'++'           reduce using rule 26
	','            reduce using rule 26
	'-'            reduce using rule 26
	'--'           reduce using rule 26
	'/'            reduce using rule 26
	';'            reduce using rule 26
	'<'            reduce using rule 26
	'<='           reduce using rule 26
	'='            reduce using rule 26
	'=='           reduce using rule 26
	'>'            reduce using rule 26
	'>='           reduce using rule 26
	'bool'         reduce using rule 26
	'double'       reduce using rule 26
	'false'        reduce using rule 26
	'if'           reduce using rule 26
	'int'          reduce using rule 26
	'return'       reduce using rule 26
	'string'       reduce using rule 26
	'true'         reduce using rule 26
	'typedef'      reduce using rule 26
	'void'         reduce using rule 26
	'while'        reduce using rule 26
	'{'            reduce using rule 26
	'||'           reduce using rule 26
	L_integ        reduce using rule 26
	L_doubl        reduce using rule 26
	L_quoted       reduce using rule 26
	L_Id           reduce using rule 26
	%eof           reduce using rule 26


State 28

	%start_pType -> Type .                              (rule 25)

	%eof           accept


State 29

	Type -> 'bool' .                                    (rule 98)

	'('            reduce using rule 98
	')'            reduce using rule 98
	'++'           reduce using rule 98
	','            reduce using rule 98
	'-'            reduce using rule 98
	'--'           reduce using rule 98
	'false'        reduce using rule 98
	'true'         reduce using rule 98
	L_integ        reduce using rule 98
	L_doubl        reduce using rule 98
	L_quoted       reduce using rule 98
	L_Id           reduce using rule 98
	%eof           reduce using rule 98


State 30

	Type -> 'double' .                                  (rule 99)

	'('            reduce using rule 99
	')'            reduce using rule 99
	'++'           reduce using rule 99
	','            reduce using rule 99
	'-'            reduce using rule 99
	'--'           reduce using rule 99
	'false'        reduce using rule 99
	'true'         reduce using rule 99
	L_integ        reduce using rule 99
	L_doubl        reduce using rule 99
	L_quoted       reduce using rule 99
	L_Id           reduce using rule 99
	%eof           reduce using rule 99


State 31

	Type -> 'int' .                                     (rule 100)

	'('            reduce using rule 100
	')'            reduce using rule 100
	'++'           reduce using rule 100
	','            reduce using rule 100
	'-'            reduce using rule 100
	'--'           reduce using rule 100
	'false'        reduce using rule 100
	'true'         reduce using rule 100
	L_integ        reduce using rule 100
	L_doubl        reduce using rule 100
	L_quoted       reduce using rule 100
	L_Id           reduce using rule 100
	%eof           reduce using rule 100


State 32

	Type -> 'string' .                                  (rule 101)

	'('            reduce using rule 101
	')'            reduce using rule 101
	'++'           reduce using rule 101
	','            reduce using rule 101
	'-'            reduce using rule 101
	'--'           reduce using rule 101
	'false'        reduce using rule 101
	'true'         reduce using rule 101
	L_integ        reduce using rule 101
	L_doubl        reduce using rule 101
	L_quoted       reduce using rule 101
	L_Id           reduce using rule 101
	%eof           reduce using rule 101


State 33

	Type -> 'void' .                                    (rule 102)

	'('            reduce using rule 102
	')'            reduce using rule 102
	'++'           reduce using rule 102
	','            reduce using rule 102
	'-'            reduce using rule 102
	'--'           reduce using rule 102
	'false'        reduce using rule 102
	'true'         reduce using rule 102
	L_integ        reduce using rule 102
	L_doubl        reduce using rule 102
	L_quoted       reduce using rule 102
	L_Id           reduce using rule 102
	%eof           reduce using rule 102


State 34

	%start_pListStm -> ListStm .                        (rule 24)
	ListStm -> ListStm . Stm                            (rule 97)

	'('            shift, and enter state 62
	'++'           shift, and enter state 63
	'-'            shift, and enter state 64
	'--'           shift, and enter state 65
	'bool'         shift, and enter state 29
	'double'       shift, and enter state 30
	'false'        shift, and enter state 67
	'if'           shift, and enter state 68
	'int'          shift, and enter state 31
	'return'       shift, and enter state 69
	'string'       shift, and enter state 32
	'true'         shift, and enter state 70
	'void'         shift, and enter state 33
	'while'        shift, and enter state 71
	'{'            shift, and enter state 72
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 73
	L_quoted       shift, and enter state 74
	L_Id           shift, and enter state 37
	%eof           accept

	Integer        goto state 38
	Double         goto state 39
	String         goto state 40
	Id             goto state 41
	Stm            goto state 136
	Exp15          goto state 44
	Exp14          goto state 45
	Exp13          goto state 46
	Exp12          goto state 47
	Exp11          goto state 48
	Exp9           goto state 49
	Exp8           goto state 50
	Exp4           goto state 51
	Exp3           goto state 52
	Exp2           goto state 53
	Exp            goto state 54
	Exp1           goto state 55
	Exp5           goto state 56
	Exp6           goto state 57
	Exp7           goto state 58
	Exp10          goto state 59
	Type           goto state 95

State 35
